--- a/css/show.css
+++ b/css/show.css
@@ -1,4 +1,4 @@
-header{font-family: '黑体','arial';background: #fff;border-bottom: solid 1px #dfdfdf;padding: 0 1.5rem;height: 5rem;line-height: 5rem;font-size: 1.8rem;position: fixed;}
+header{font-family: '黑体','arial';background: #fff;border-bottom: solid 1px #dfdfdf;padding: 0 1.5rem;height: 5rem;line-height: 5rem;font-size: 1.8rem;position: fixed;width: 100%;top: 0px;}
 header .container{margin:auto;}
 header .container .index{color: #2b61c0;padding: .8rem .2rem;margin: 0 .3rem;}
 header .container .share-bth{margin-top: 1rem;float: right;line-height: 3rem;border-radius: 3px;padding: .8rem .2rem;margin: 0 1.3rem;}
