--- a/css/show.css
+++ b/css/show.css
@@ -3,7 +3,9 @@ header .container{margin:auto;}
 header .container .index{color: #2b61c0;padding: .8rem .2rem;margin: 0 .3rem;}
 header .container .share-bth{margin-top: 1rem;float: right;line-height: 3rem;border-radius: 3px;padding: .8rem .2rem;margin: 0 1.3rem;}
 header .container .index .jian {margin: 0 1rem 0 0;height: 2rem;}
-.show-content{background: #fff;padding: 0 2.5rem 1rem;overflow: hidden;margin-top: 5rem;}
+
+.content{margin-top: 5rem;}
+.show-content{background: #fff;padding: 0 2.5rem 1rem;overflow: hidden;}
 .show-content h2{font-size: 2.2rem;text-align: center;padding: 1rem 0;}
 .show-content {font-size: 2.2rem;text-align: center;padding: 1rem 0;}
 .show-content .em{font-size: 1.4rem;line-height: 1.4rem;padding-bottom: 1rem;border-bottom: solid 1px #dfdfdf;font-size: 1.6rem;line-height: 1.6rem;text-align: left; margin-left: 1rem;}
@@ -28,7 +30,7 @@ header .container .index .jian {margin: 0 1rem 0 0;height: 2rem;}
 .show-updown-list .show-updown-list-a {width: 100%;border-bottom: 1px dotted #333;display: block;height: 7.8rem; margin-bottom: 2px;}
 .show-updown-list .show-updown-list-a:last-child {width: 100%;display: block;}
 .show-updown-list .show-updown-list-a div:first-child{display: inline-block;width: 20%;float: left;overflow: hidden;}
-.show-updown-list .show-updown-list-a div:first-child img{max-width: 100%;    max-height: 7.5rem;overflow: hidden;}
+.show-updown-list .show-updown-list-a div:first-child img{width: 100%;    height: 7.5rem;overflow: hidden;}
 .show-updown-list .show-updown-list-a div:last-child{display: inline-block;width: 80%;padding-left:1rem;margin-top: .8rem;overflow: hidden;}
 .show-updown-list .show-updown-list-a div:last-child h2{height: 5rem;font-size: 1.6rem;line-height: 25px;display:block;white-space:nowrap; overflow:hidden; text-overflow:ellipsis;word-wrap:break-word; white-space:normal; word-break:break-all;}
 .show-updown-list .show-updown-list-a div:last-child .em {padding: .4rem 0;}
