陈德华的www.xnnye.cn|www.adehua.com阿里云自动部署

--- a/css/main.less
+++ b/css/main.less
@@ -36,6 +36,7 @@ header{
 	height: 5rem;
 	line-height: 5rem;
 	font-size: 2rem;
+	margin-top: 2rem;
 	.container{
 		margin:auto;
 		.index{color: #2b61c0;padding: .8rem .2rem;margin: 0 .3rem;}
@@ -94,7 +95,7 @@ nav{
 #wrapper {
 	position: absolute;
 	z-index: 1;
-	top: 9.9rem;
+	top: 11.9rem;
 	bottom: 0;
 	left: 0;
 	width: 100%;
